[package]
name = "lib-client-openrouter"
version = "0.1.0"
edition = "2021"
description = "OpenRouter API client library"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
thiserror = "2"
tracing = "0.1"
